# CoolCode

./: .gitignore  LICENSE  README.md  pyproject.toml
src/perplex_agent/: __init__.py  cli.py  client.py  config.py  direct_tools.py  history_compact.py  orchestrator.py  planning.py  setup_wizard.py  slash_complete.py  slash_shell.py  subagents.py  telegram_bot.py  telegram_util.py  tool_defs.py  tool_runtime.py  ui.py  workspace.py
tests/: test_history_compact.py  test_parse.py  test_sonar_models.py  test_subagents.py  test_telegram_util.py  test_tool_runtime.py  test_workspace.py
