[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "perplex-agent"
version = "0.1.0"
description = "CLI orchestrator with Perplexity Sonar API, subagents, and Telegram bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<0.29",
    "typer>=0.12,<0.20",
    "python-telegram-bot>=21.6,<23",
    "rich>=13.7,<15",
    "tomli-w>=1.0,<2",
    "prompt-toolkit>=3.0.36,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.24,<1"]

[project.scripts]
perplex-agent = "perplex_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
